2002-01-31  Edwin Leuven  <leuven@fee.uva.nl>
	
	* qt2/QGraphics.C
	* qt2/QGraphics.h
	* qt2/QGraphicsDialog.C
	* qt2/QGraphicsDialog.h
	* qt2/lengthcombo.C
	* qt2/ui/QGraphicsDialog.ui: new dialog
	* qt2/QAbout.C:
	* qt2/ui/QAboutDialog.ui: reduce size
	* qt2/ui/QFloatDialog.ui: update dialog

2002-01-29  Edwin Leuven  <leuven@fee.uva.nl>

	* Makefile.am:
	* Dialogs.C:
	* Makefile.dialogs:
	* QShowFile.h:
	* QShowFile.C:
	* QShowFileDialog.h:
	* QShowFileDialog.C:
	* ui/QShowFileDialog.ui: add showfile dialog
	* ui/QCitationDialog.ui: minor layout tweaks

2002-01-25  Angus Leeming  <a.leeming@ic.ac.uk>

	* Dialogs.C: removed now redundant #include "QParagraph.h".

	* QSearchDialog.h (remember): removed unnecessary
	QSearchDialog qualifier.

	* QTexinfo.C:
	* QToc.C: added various using std::xyz directives.

2002-01-25  Edwin Leuven  <leuven@fee.uva.nl>

	* Makefile.am:
	* Dialogs.C:
	* Makefile.dialogs:
	* QFloat.h:
	* QFloat.C:
	* QFloatDialog.h:
	* QFloatDialog.C:
	* ui/QFloatDialog.ui: add float dialog

2002-01-25  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.am:
	* Makefile.dialogs: don't compile QPar/Doc
	  for now, as they cause problems
 
2002-01-20  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.am:
	* Dialogs.C:
	* QToc.h:
	* QToc.C:
	* QTocDialog.h:
	* QTocDialog.C:
	* ui/QTocDialog.ui: resuscitate TOC dialog
 
2002-01-20  John Levon  <moz@compsoc.man.ac.uk>

	* QCitation.h:
	* QCitation.C:
	* QCitationDialog.h:
	* QCitationDialog.C:
	* ui/QCitationDialog.ui: natbib fixes

2002-01-19  Edwin Leuven  <leuven@fee.uva.nl>

	* QTexinfo.[Ch]: added
	* QTexinfoDialog.[Ch]: added
	* ui/QTexinfoDialog.ui: added
	* Dialogs.C: add dialog
	* Makefile.dialogs: idem

2002-01-18  Edwin Leuven  <leuven@fee.uva.nl>

	* QMinipage.C: compiles fixes (lyxlength related)

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.am: 
	* FileDialog_private.h: fix compile

	* QThesaurus.h:
	* QThesaurus.C:
	* QThesaurusDialog.h:
	* QThesaurusDialog.C: