@@ -1,5 +1,11 @@
+2002-02-06  Edwin Leuven  <leuven@fee.uva.nl>
+	* QGraphics.C: compilation fix
+	* QTexinfoDialog.C:
+	* QTexinfoDialog.h:
+	* ui/QTexinfoDialog.ui: remove help button
+
 2002-01-31  Edwin Leuven  <leuven@fee.uva.nl>
-	
+
 	* qt2/QGraphics.C
 	* qt2/QGraphics.h
 	* qt2/QGraphicsDialog.C
